<resources>
    <string name="app_name">SDVM2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganapti_aarti">  सुखकर्ता दुखहर्ता, वार्ता विघ्नांची|\nनुरवी; पुरवी प्रेम, कृपा जयाची |\nसर्वांगी सुंदर, उटी शेंदुराची|\nकंठी झळके माळ, मुक्ताफळांची॥१॥\n\nजय देव, जय देव जय मंगलमूर्ती|\nदर्शनमात्रे मन कामना पुरती ॥धृ॥\n\nरत्नखचित फरा, तुज गौरीकुमरा|\nचंदनाची उटी , कुमकुम केशरा|\nहिरेजडित मुकुट, शोभतो बरा |\nरुणझुणती नूपुरे, चरणी घागरिया|\nजय देव जय देव जय मंगलमूर्ती ॥२॥\n\nलंबोदर पीतांबर, फणिवरबंधना |\nसरळ सोंड, वक्रतुंड त्रिनयना|\nदास रामाचा, वाट पाहे सदना|\nसंकटी पावावे, निर्वाणी रक्षावे, सुरवरवंदना|\nजय देव जय देव, जय मंगलमूर्ती|\nदर्शनमात्रे मनकामना पुरती ॥३॥</string>
    <string name="durga_aarti">  दुर्गे दुर्घट भारी तुजविण संसारी।\nअनाथ नाथे अम्बे करुणा विस्तारी।\nवारी वारी जन्म मरणांते वारी।\nहारी पडलो आता संकट निवारी॥\n\nजय देवी जय देवी महिषासुरमथिनी।\nसुरवर ईश्वर वरदे तारक संजीवनी॥\nत्रिभुवन-भुवनी पाहता तुज ऐसी नाही।\nचारी श्रमले परन्तु न बोलवे काही।\nसाही विवाद करिता पडले प्रवाही।\nते तू भक्तालागी पावसि लवलाही॥\n\nजय देवी जय देवी महिषासुरमथिनी।\nसुरवर ईश्वर वरदे तारक संजीवनी॥\n\nप्रसन्न वदने प्रसन्न होसी निजदासा।\n क्लेशांपासुनि सोडवि तोडी भवपाशा।\nअम्बे तुजवाचून कोण पुरविल आशा।\nनरहरी तल्लिन झाला पदपंकजलेशा॥\n\nजय देवी जय देवी महिषासुरमथिनी।\nसुरवर ईश्वर वरदे तारक संजीवनी॥</string>
    <string name="guru_datt_aarti">त्रिगुणात्मक त्रैमूर्ती दत्त हा जाणा।\nत्रिगुणी अवतार त्रैलोक्यराणा।\nनेती नेती शब्द न ये अनुमाना।\nसुरवर मुनिजन योगी समाधि न ये ध्याना॥\n\nजय देव जय देव जय श्री गुरुदत्ता।\nआरती ओवाळीतां हरली भवचिन्ता॥\n\nसबाह्य अभ्यंतरी तू एक दत्त।\nअभाग्यासी कैसी न कळे ही मात।\nपराही परतली तेथे कैचा हेत।\nजन्ममरणाचा पुरलासे अन्त॥\n\nजय देव जय देव जय श्री गुरुदत्ता।\nआरती ओवाळीतां हरली भवचिन्ता॥\n\nदत्त येऊनियां ऊभा ठाकला।\nसद्भावे साष्टांगे प्रणिपात केला।\nप्रसन्न होऊनी आशीर्वाद दिधला।\nजन्ममरणाचा फेरा चुकविला॥\n\nजय देव जय देव जय श्री गुरुदत्ता।\nआरती ओवाळीतां हरली भवचिन्ता॥\n\दत्त दत्त ऐसे लागले ध्यान।\nहरपलें मन झालें उन्मन।\nमी तू पणाची झाली बोळवण।\nएका जनार्दनी श्रीदत्तध्यान॥\n\nजय देव जय देव जय श्री गुरुदत्ता।\nआरती ओवाळीतां हरली भवचिन्ता॥\n</string>
    <string name="panduranga_aarti">युगें अठ्ठावीस विटेवरी उभा।\nवामांगी रखुमाई दिसे दिव्य शोभा।\nपुण्डलिकाचे भेटी परब्रह्म आलें गा।\nचरणी वाहे भीमा उद्धरी जगा॥\n\nजय देव जय देव जय पाण्डुरंगा।\nरखुमाईवल्लभा राईच्या\nवल्लभा पावें जिवलगा॥\n\nतुळसीमाळा गळां कर ठेवुनि कटीं।\nकांसे पीताम्बर कस्तुरि लल्लाटी।\nदेव सुरवर नित्य येती भेटी।\nगरुड हनुमन्त पुढे उभे राहती॥\n\nजय देव जय देव जय पाण्डुरंगा।\nरखुमाईवल्लभा राईच्या\n वल्लभा पावें जिवलगा॥\n\nधन्य वेणुनाद अनुक्षेत्रपाळा।\nसुवर्णाची कमळे वनमाळा गळां।\nराही रखुमाबाई राणीया सकळा।\nओवाळिती राजा विठोबा सांवळा॥\n\nजय देव जय देव जय पाण्डुरंगा।\nरखुमाईवल्लभा राईच्या\nवल्लभा पावें जिवलगा॥\n\nओवाळूं आरत्या कुर्वण्ड्या येती।\nचन्द्रभागेमाजी सोडुनियां देती।\nदिंड्या पताका वैष्णव नाचती।\nपंढरीचा महिमा वर्णावा किती॥\n\nजय देव जय देव जय पाण्डुरंगा।\nरखुमाईवल्लभा राईच्या\nवल्लभा पावें जिवलगा॥\n\nआषाढी कार्तिकी भक्तजन येती।\nचन्द्रभागेमाजी स्नाने जे करिती।\nदर्शनहेळामात्रें तयां होय मुक्ती।\nकेशवासी नामदेव भावे ओंवाळिती॥\n\nजय देव जय देव जय पाण्डुरंगा।\nरखुमाईवल्लभा राईच्या\nवल्लभा पावें जिवलगा॥\n\n</string>
    <string name="shankarachi_aarti"> लवथवती विक्राळा ब्रह्मांडी माळा ।\nवीषें कंठ काळा त्रिनेत्रीं ज्वाळा ॥\nलावण्यसुंदर मस्तकीं बाळा ।\nतेथुनियां जल निर्मळ वाहे झुळझूळां ॥ १ ॥\n\nजय देव जय देव जय श्रीशंकरा ।\nआरती ओवाळूं तुज कर्पूरगौरा ॥ ध्रु० ॥\n\nकर्पूरगौरा भोळा नयनीं विशाळा ।\nअर्धांगीं पार्वती सुमनांच्या माळा ॥\nविभुतीचें उधळण शितिकंठ नीळा ।\nऐसा शंकर शोभे उमावेल्हाळा ॥ जय देव० ॥ २ ॥\n\nदेवीं दैत्य सागरमंथन पै केलें ।\nत्यामाजीं जें अवचित हळाहळ उठिलें ॥\nतें त्वां असुरपणें प्राशन केलें ।\nनीळकंठ नाम प्रसिद्ध झालें ॥ जय देव० ॥ ३ ॥\n\nव्याघ्रांबर फणिवरधर सुंदर मदनारी ।\nपंचानन मनमोहन मुनिजनसुखकारी ॥\nशतकोटीचें बीज वाचे उच्चारी ।\nरघुकुळटिळक रामदासा अंतरीं ॥ \nजय देव जय देव० ॥ ४ ॥</string>
    <string name="sadguru_aarti"> आरती सद्गुरू रायाची। करितो सद्भावे साची ।। तन मन अर्पुनी हो गुरूला। प्रेमे ओवाळू त्याला। पंचप्राणांच्या वाती। लावूनी नेत्रांच्या ज्योती। मन हे स्थिर करूनी पहा । देवा श्री सद्गुरूला । दुसरा देव नसे ऐसा, भक्तजनांच्या पुरवी आशा । तोडुनी टाकी संसृति पाशा ।। धरू हो कास आम्ही त्याची । असे ही कामधेनू आमुची || १ ||\n\nध्यान ते रम्य किती दिसते। धरी जो हाती दंडाते। भाळी भस्माच्या रेषा । शोभती तीन पहा कैश्या । कटिवर कद तो झळकतसे कौपीन रम्य किती भासे । कमंडलु तोही वंशाचा । हाती शोभतसे साचा । विधीहरि हर हा त्रयमूर्ती। दत्तचि ऐसे मजला भासे । मन्मनी विलसे। मूर्ति मनोहर ही त्याची, असे ही कामधेनू आमुची || २ ||\n\nदयाळु किती म्हणुनी सांगू। वाणी होत असे पंगू । केवळ ज्ञानाचा भानू । तयाचे गुण किती मी वर्णू। स्वामी वासुदेव राया। सतत मी शरण तुझें पाया। वासुदेव करी आरती । दिधली सद्गुरूने स्फूर्ती । स्वामी सद्गुरू रायाची। स्वामी श्री गुरू रायाची। करिता आरती दुर्दिन जाती। सुदिन भासती पहा प्रचीती। सत्ता सर्वही सद्गुरूची । असे ही कामधेनू आमुची।।३।।</string>
    <string name="vithala_aarti"> येई हो विठ्ठले माझे माउली ये। निढळावर कर ठेवुनी वाट मी पाहे।।धृ.।।\nआलिया गेलिया हाती धाडी निरोप | पंढरपुरी आहे माझा मायबाप।।१।।\nपिवळा पीतांबर कैसा गगनी झळकला। गरुडावरि बैसून माझा कैवारी आला ।।२।। विठोबाचे राज्य आम्हा दसरा दिपवाळी । विष्णुदास नामा जीवे भावे ओवाळी ॥३॥</string>
    <string name="jaya_jagadish_aarti">ॐ जय जगदीश हरे स्वामी जय जगदीश हरे।\nभक्तजनों के संकट, \nदासजनों के संकट क्षण में दूर करे।।धृ.।।\n\n जो ध्यावे फल पावे दुख बिनसे मन का। \nस्वामी दुख विनसे मन का ।\nसुख संपत्ती घर आवे। \nकष्ट मिटे तन का।।१।।\n\nमात पिता तुम मेरे शरण गहूँ मैं किसकी।\nस्वामी शरण गहूँ मैं किसकी।\nतुम बिन और न दूजा ।\nप्रभू बिन और न दूजा। \nआस धरूं मैं जिसकी ॥२॥\n\nतुम पूरण परमात्मा, तुम अंतर्यामी।\nस्वामी तुम अंतर्यामी। \nपारब्रह्म परमेश्वर, तुम सबके स्वामी।।३।।\n\nतुम करुणा के सागर, तुम पालनकर्ता।\nमैं मूरख फलकामी, मैं सेवक तुम स्वामी कृपा करो भर्ता ||४||\n\nदीन बंधु दुखहर्ता ठाकुर तुम मेरे, स्वामी रक्षक तुम मेरे।\nअपने हाथ उठाओ, अपनी शरण बिठाओ, \nद्वार खड़ा मैं तेरे ||५||\n\nविषय विकार मिटाओ, पाप हरो देवा, \nस्वामी पाप हरो देवा ।\nश्रद्धा भक्ती बढाओ, श्रद्धा प्रेम बढाओ, \nसंतन की सेवा ॥ ६ ॥\n\nतन मन धन यह जीवन सब कुछ है तेरा, स्वामी सब कुछ है तेरा।\nतेरा तुझको अर्पण, क्या लागे मेरा ॥ ७ ॥\n\nॐ जय जगदीश हरे...॥धृ.॥</string>
    <string name="shendur_laal_aarti">शेंदुर लाल चढायो अच्छा गजमुख को।\nदोंदिल लाल विराजे सुत गौरीहर को।\nहाथ लिये गुड-लड्डू साईं सुरवर को ।\nमहिमा कहे न जाय लागत हूँ पद को।। १।।\n\nजय जयजी गणराज विद्या सुखदाता,\nधन्य तुम्हारा दर्शन मेरा मन रमता।।धृ.।।\n\nअष्टौ सिद्धी दासी संकट को बैरी।\nविघ्न विनाशन मंगल मूरत अधिकारी।\nकोटि सूरज प्रकाश ऐसी छबि तेरी।\nगंडस्थल मदमस्तक शोभे शशिबिहारी ॥२॥\n\nभावभगती से कोई शरणागत आवे।\nसंतति संपति सब ही भरपूर पावे। \nऐसे तुम महाराज मोको अति भावे । \nगोसावीनंदन निशिदिन गुण गावे||३||</string>
    <string name="nana_parimar_aarti">नाना परिमळ दुर्वा शेंदुर शमिपत्रे । \nलाडू मोदक अन्ने परिपूरित पात्रे । \nऐसे पूजन केल्या बीजाक्षर मंत्रे। \nअष्टही सिद्धी नवनिधि देसी क्षणमात्रे || १ || \n\nजय देव जय देव जय मंगलमूर्ती तुझे गुण वर्णाया मज कैची स्फूर्ती।। धृ.।। \n\nतूझे ध्यान निरंतर जे कोणी करिती। \nत्यांची सकल ही पापे विघ्नेही हरती। \nबाजी वारण शिबिका सेवक सुत युवती। \nसर्व ही पावती अंती भवसागर तरती || २ || \n\nशरणागत सर्वस्वे भजती तव चरणी । \nकीर्ती तयांची राहे जोवर शशितरणी। \nत्रैलोक्यी ते विजयी अद्भूत हे करणी। \nगोसावीनंदन रत नामस्मरणी||३||</string>
    <string name="sn_aarti_hindi">जय लक्ष्मीरमणा, स्वामी जय लक्ष्मीरमणा सत्यनारायण स्वामी, जनपातक हरणा।। जय………।। \nरत्न जडित सिंहासन अद्भुत छवि राजे। \nनारद करत निराजन घंटा ध्वनि बाजे ।। जय...।। \nप्रगट भये कलि कारण द्विज को दर्श दियो । \nबूढो ब्राह्मण बनकर कंचन महल कियो ।। जय....।। \nदुर्बल भील कठारो इन पर कृपा करी । \nचन्द्रचूड एक राजा जिनकी विपति हरी।। जय...।। \nवैश्य मनोरथ पायो श्रद्धा तज दीनी । \nसो फल भोग्यो प्रभुजी फिर स्तुति कीनी ।। जय ... ।। \nभाव भक्ति के कारण छिन छिन रूप धरयो । \nश्रद्धा धारण कीनी तिनको काज सरयो।। जय... ।। \nग्वाल बाल संग राजा वन में भक्ति करी । \nमनावांछित फल दीन्हो दीनदयाल हरी ।। जय... ।। \nचढत प्रसाद सवाया कदली फल मेवा। \nधूप दीप तुलसी से राजी सत्यदेवा।। जय....।। \nश्री सत्यनारायण जी की आरती जो कोई नर गावे । \nकहत शिवानन्द स्वामी मनावांछित फल पावे।। जय...।।</string>
    <string name="sn_aarti_marathi">जय जय दीनदयाळा सत्यनारायण देवा ॥\nपंचारति ओवाळूं श्रीपति तुज भक्तिभावा ॥\n\nविधियुक्त पूजुनी करिती पुराण श्रवण ॥\nपरिमलद्रव्यांसहित पुष्पमाळा अर्पून ॥\nघृतयुक्तशर्करामिश्रित गोधूमचूर्ण ॥\nप्रसाद भक्षण करितां तूं त्यां प्रसन्न नारायण ॥\nजय जय दीनदयाळा सत्यनारायण देवा\n\nशतानंदे विप्रें पूर्वी व्रत हें आचरिलें ॥\nदरिद्र दवडुनि अंतीं त्यातें मोक्षपदा नेलें ॥\nत्यापासुनि हें व्रत या कलियुगीं \nसकळां श्रुत झालें ॥\nभावार्थें पूजितां सर्वां इच्छित लाधलें ॥\nजय जय दीनदयाळा सत्यनारायण देवा\n\nसाधुवैश्यें संततिसाठीं तुजला प्रार्थियलें ॥\nइच्छित पुरतां मदांध होऊनि व्रत न आचरिलें ॥\nत्या पापानें संकटिं पडुनी दुःखहि भोगीलें ॥\nस्मृति हो‍उनि आचरितां व्रत त्या तुवांचि उद्ध्रिलें ॥\nजय जय दीनदयाळा सत्यनारायण देवा\n\nप्रसाद विसरुनि पतिभेटीला कलावती गेली ॥\nक्षोभ तुझा होतांचि तयाची नौका बुडाली ॥\nअंगध्वजरायासी यापरि दुःखस्थिति आली ॥\nमृतवार्ता शतपुत्रांची सत्वर कर्णीं परिसीली ॥\nजय जय दीनदयाळा सत्यनारायण देवा\n\nपुनरपि पूजुनि प्रसाद ग्रहण करितां तत्क्षणीं ॥\nपतिची नौका तरली देखे कलावती नयनीं ॥\nअंगध्वजरायासी पुत्र भेटति येऊनि ॥\nऐसा भक्तां संकटिं पावसी तूं चक्रपाणी ॥\nजय जय दीनदयाळा सत्यनारायण देवा\n\nअनन्यभावें पूजुनि हें व्रत जेजन आचरती ॥\nइच्छित पुरविसि त्यांतें देउनि संतति संपत्ति ॥\nसंहरसी भवदुरितें सर्वहि बंधने तुटती ॥\nराजा रंका समान मानुनि पावसि श्रीपती ॥\n\nजय जय दीनदयाळा सत्यनारायण देवा\nऐसा तव व्रतमहिमा अपार वर्णूं मी कैसा । \nभक्तिपुरःसर आचरती त्यां पावसि जगदीशा । \nभक्तांचा कनवाळू कल्पद्रुम तूं सर्वेशा ॥ \nमोरेश्वरसुत वासुदेव तुज विनवी भवनाशा ॥ \nजय जय दीनदयाळा सत्यनारायण देवा</string>
    <string name="swami_samarth_aarti">जय जय सद्-गुरु स्वामी समर्था,\nआरती करु गुरुवर्या रे।\nअगाध महिमा तव चरणांचा,\nवर्णाया मति दे यारे॥धृ॥\n\nअक्कलकोटी वास करुनिया,\nदाविली अघटित चर्या रे।\nलीलापाशे बध्द करुनिया,\nतोडिले भवभया रे॥१॥\n\nयवन पूछिले स्वामी कहॅा है,\nअक्कलकोटी पहा रे।\nसमाधी सुख ते भोगुन बोले,\nधन्य स्वामीवर्या रे॥२॥\n\nजाणिसे मनीचे सर्व समर्था,\nविनवू किती भव हरा रे।\nइतुके देई दीनदयाळा,\nनच तव पद अंतरा रे॥३॥\n</string>
    <string name="mantra_pushapanji">ॐ गणानां त्वा गणपतिं हवामहे कर्विकवीनामुपमश्रवस्तमम्। ज्येष्ठराजं ब्रह्मणां ब्रह्मणस्पत आनः शृण्वन्नुतिभिः सीदसादनम्। नमो महद्भ्यो नमो अर्भकेभ्यो नमो युवभ्यो नम आशिनेभ्यः । यजामदेवान्यदिशक्नवाममाज्यायसः शंसमावृक्षिदेवाः || १ || ममत्तुनः परिज्मावसर्हा ममत्त्वातोऽअपां वृषण्वान् । । शिशीतमिंद्रा पर्वतायुवंनस्तन्नो विश्वेवरिवस्यंतु देवाः || २ || कथातेऽअग्ने शुचयंतऽ आयोददा शुर्वाजेभिराशुषाणः ।। उभेयत्तो के तनये दधान ऋतस्य सामनृणयंत देवाः || ३ || ॐ यज्ञेनयज्ञमयजन्त देवास्तानि धर्माणि प्रथमान्यासन् तेहनाकं महिमानः सचंत यत्र पूर्वे साध्याः सन्ति देवाः । ॐ राजाधिराजाय प्रसह्य साहिने नमो वयं वैश्रवणाय कुर्महे । स मे कामान् कामकामाय मह्यं । कामेश्वरो वैश्रवणो ददातु। कुबेराय वैश्रवणाय महाराजाय नमः । ॐ स्वस्ति साम्राज्यं भौज्यं स्वाराज्यं वैराज्यं पारमेष्ठ्यं राज्यं महाराज्यम् आधिपत्यमयं समन्तपर्यायी स्यात् सार्वभौमः सार्वायुष आंतादापरार्धात् । पृथिव्यै समुद्रपर्यंताया एकराळिति तदप्येषश्लोकोऽभिगीतो मरुतः परिवेष्टारो मरुत्तस्यावसन् गृहे। आवीक्षितस्य कामप्रेर्विश्वेदेवाः सभासद इति।\nयो वै तां ब्रह्मणो वेद। अमृतेना प्लुतांपुरीम् । तस्यै ब्रह्म च ब्रह्मा च आयुः किर्ति प्रजां ददुः । ॐ विश्वतश्चक्षु रुत विश्वतो मुखो । विश्वतो बाहुरुत विश्वतस्पात । संबाहुभ्यां धमति संपतत्रैर्द्यावा भूमिं जनयन् देवं एकः \nसंसृष्टं घनमुभयं समाकृत मस्मभ्यं। दत्तां वरुणश्च मन्युः भिय दधाना हृदयेषु शत्रवः पराजितासो अपनिलयन्ताम्। त्रिनयन मभिमुख निःसृतां इमां य इह पठेत् प्रयतश्च सदा द्विजः। स भवति धनधान्य, पशु पुत्र कीर्तिमान् अतुलं च सुखं समश्नुते। दिवीति दिवीति \nॐ एकदन्ताय विद्महे। वक्रतुंडाय धीमहि। तन्नो दन्ती प्रचोदयात्। \nॐ दिगंबराय विद्महे। अवधूताय धीमहि । तन्नो दत्तः प्रचोदयात्। \nॐ नारायणाय विद्महे। विष्णुपत्न्यै च धीमहि तन्नो विष्णुः प्रचोदयात्। \nॐ तत्पुरुषाय विद्महे। महादेवाय धीमहि। तन्नो रुद्रः प्रचोदयात् ।। \nॐ कात्यायन्यै विद्महे। कन्याकुमार्यै धीमहि तन्नो दुर्गा प्रचोदयात् । \nॐ आंजनेयाय विद्महे। वायुपुत्राय धीमहि तन्नो हनुमत् प्रचोदयात्।।</string>
</resources>