<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aartiya_fragment.NityaAartiFragament">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_nitya_chi_aarti" />
<androidx.core.widget.NestedScrollView
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ganapati" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="॥आरती गणपतीची॥"
                    android:textColor="@color/black"
                    android:textSize="25dp" />


            </LinearLayout>


            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ganapti_aarti"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/durga" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="॥आरती दुर्गा देवीची॥"
                    android:textColor="@color/black"
                    android:textSize="25dp" />


            </LinearLayout>
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/durga_aarti"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/sgd" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="॥आरती श्री दत्ताची॥"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/guru_datt_aarti"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="17dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/flower" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="॥मंत्र पुष्पांजली॥"
                    android:textColor="@color/black"
                    android:textSize="25dp" />
            </LinearLayout>
            <TextView
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/mantra_pushapanji"
                android:textColor="@color/black"
                android:textSize="17dp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


    </androidx.appcompat.widget.LinearLayoutCompat>


</FrameLayout>